# vectormatrix

./: CMakeLists.txt  README.md
include/: array.h
src/: array_test1.c  array_test2.c  array_test3.c  array_test4.c  hilbert_matrix.c
